HTML Wireframe/css/styles.css
html, body{
    height: 100%;
    text-align: center;
    margin: auto;
    background-color: #A9333A;
}

button{
    display: block;
    margin: 4% auto;
}

h1, h2, h3, li{
    margin: 2% auto;
    font-family: 'Montserrat', sans-serif;
    font-weight: bold;
    color: #EEEEEE;
}

h1:hover, h2:hover, h3:hover, li:hover{
    margin: 2% auto;
    font-family: 'Montserrat', sans-serif;
    font-weight: bolder;
    color: #151515;
}

input.form-control, textarea.form-control{
    background-color: #151515;
    color: #EEEEEE;
}

input.form-control:focus, textarea.form-control:focus{
    background-color: #151515;
    color: #EEEEEE;
    border-color: #EEEEEE;
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px #EEEEEE;
    outline: 0 none;
}

ul.navbar-nav.ms-auto.text-center{
    padding: 0%;
}

a:hover{
    background-color: #A9333A;
}

nav[class="navbar navbar-expand-lg navbar-dark"]{
    background-color: #151515;
}

nav.navbar.navbar-expand-lg.navbar-dark{
    padding: 0;
}

nav.navbar.navbar-expand-lg.navbar-dark a.navbar-brand{
    color: #EEEEEE;
    font-family: 'Montserrat', sans-serif;
    font-weight: 700;
    padding: 1%;
}

p{
    margin: 2% auto;
    font-family: 'Roboto', sans-serif;
    font-size: 1rem;
    font-weight: bolder;
    color: #151515;
}

p:hover{
    margin: 2% auto;
    font-family: 'Roboto', sans-serif;
    font-size: 1rem;
    font-weight: bolder;
    color: #EEEEEE;
}

.btn-outline-dark{
    border-color: #EEEEEE;
    color: #EEEEEE;
}

.btn.btn-outline-dark:hover{
    background-color: #151515;
}

.col-md-6{
    margin: 2% auto;
}

.col-md-4{
    margin: 2% auto;
    width: fit-content;
}

.container-fluid{
    padding: 0;
}

.navbar-brand a, .navbar-nav.ms-auto.text-center li a{
    color: #EEEEEE;
    font-family: 'Roboto', sans-serif;
    font-size: 1rem;
}

.navbar-toggler{
    margin: 0;
}

.row{
    margin: 4% auto;
}

#nomargin{
    margin: 0%;
}

#fname:focus-within label, #lname:focus-within label, 
#age:focus-within label, #gender:focus-within label, 
#offense:focus-within label, #casedetails:focus-within label,
#lookupfname:focus-within label, #lookuplname:focus-within label,
#lookupoffenderid:focus-within label, #loginpassword:focus-within label, #loginconfirm:focus-within label
{
    color: #EEEEEE;
}

